--- a/projet_2/projet2-3i005-2019fev.ipynb
+++ b/projet_2/projet2-3i005-2019fev.ipynb
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.220544Z",
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.244240Z",
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:29.286193Z",
@@ -1367,18 +1367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'projet' has no attribute 'MAPNaiveBayesClassifier'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-76-ee6dfb82977b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcl\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprojet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMAPNaiveBayesClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetNthDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'projet' has no attribute 'MAPNaiveBayesClassifier'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "{'age': 4, 'sex': 0, 'cp': 1, 'trestbps': 7, 'chol': 5, 'fbs': 0, 'restecg': 0, 'thalach': 11, 'exang': 0, 'oldpeak': 4, 'slope': 2, 'ca': 0, 'thal': 2, 'target': 1}\n"
      ]
     }
    ],
@@ -1390,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:29.796791Z",
@@ -1402,14 +1399,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimation de la proba de l'individu 0 par MAPNaiveBayesClassifier : (5.265474022893807e-11, 8.779438846356187e-12)\n",
+      "Estimation de la proba de l'individu 0 par MAPNaiveBayesClassifier : (0.946114642475655, 0.053885357524345034)\n",
       "Estimation de la classe de l'individu 0 par MAPNaiveBayesClassifier : 0\n",
-      "Estimation de la proba de l'individu 1 par MAPNaiveBayesClassifier : (2.845222216320138e-09, 3.4960763242312494e-08)\n",
+      "Estimation de la proba de l'individu 1 par MAPNaiveBayesClassifier : (0.1924103068363632, 0.8075896931636367)\n",
       "Estimation de la classe de l'individu 1 par MAPNaiveBayesClassifier : 1\n",
-      "Estimation de la proba de l'individu 2 par MAPNaiveBayesClassifier : (3.6835223975945704e-10, 1.5920340255297033e-06)\n",
+      "Estimation de la proba de l'individu 2 par MAPNaiveBayesClassifier : (0.0006768916836761284, 0.9993231083163238)\n",
       "Estimation de la classe de l'individu 2 par MAPNaiveBayesClassifier : 1\n",
-      "test en apprentissage : {'precision': 0.9333333333333333, 'vp': 350, 'vn': 113, 'fp': 25, 'fn': 54, 'rappel': 0.8663366336633663}\n",
-      "test en validation: {'precision': 0.9534883720930233, 'vp': 123, 'vn': 56, 'fp': 6, 'fn': 15, 'rappel': 0.8913043478260869}\n"
+      "test en apprentissage : {'precision': 0.9563953488372093, 'vp': 329, 'vn': 123, 'fp': 15, 'fn': 75, 'rappel': 0.8143564356435643}\n",
+      "test en validation: {'precision': 0.9741379310344828, 'vp': 113, 'vn': 59, 'fp': 3, 'fn': 25, 'rappel': 0.8188405797101449}\n"
      ]
     }
    ],
