changements nom de variables

--- a/projet_2/projet2-3i005-2019fev.ipynb
+++ b/projet_2/projet2-3i005-2019fev.ipynb
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:29.286193Z",
@@ -1358,27 +1358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "{'age': 4, 'sex': 0, 'cp': 1, 'trestbps': 7, 'chol': 5, 'fbs': 0, 'restecg': 0, 'thalach': 11, 'exang': 0, 'oldpeak': 4, 'slope': 2, 'ca': 0, 'thal': 2, 'target': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cl=projet.MAPNaiveBayesClassifier(train)\n",
-    "print(i)\n",
-    "print(utils.getNthDict(train,i))"
+    "cl=projet.MAPNaiveBayesClassifier(train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:29.796791Z",
