--- a/projet_3/Projet3-OHOUENS-FUMERON.ipynb
+++ b/projet_3/Projet3-OHOUENS-FUMERON.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3i005 - projet 3 - 2019fev -"
+    "# 3i005 - projet 3 - 2019avril -"
    ]
   },
   {
