--- a/projet_3/Projet3-OHOUENS-FUMERON.ipynb
+++ b/projet_3/Projet3-OHOUENS-FUMERON.ipynb
@@ -461,6 +461,73 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modèles de dinucléotides et trinucléotides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 - Ecrire une fonction qui estime M à partir des comptages des mots de longueur 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of projet failed: Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/IPython/extensions/autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/usr/local/lib/python3.5/dist-packages/IPython/extensions/autoreload.py\", line 368, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/usr/lib/python3.5/imp.py\", line 314, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"/usr/lib/python3.5/importlib/__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 626, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 669, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 775, in get_code\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 735, in source_to_code\n",
+      "  File \"<frozen importlib._bootstrap>\", line 222, in _call_with_frames_removed\n",
+      "  File \"/users/nfs/Etu5/3670015/3i005/projet_3/projet.py\", line 250\n",
+      "    dico = count_word(2,sequence)\n",
+      "       ^\n",
+      "IndentationError: expected an indented block\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'estimeMatrice' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-da7639495892>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mestimeMatrice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequencePHO\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"complet\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'estimeMatrice' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "estimeMatrice(sequencePHO[\"complet\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
